--- a/notebooks/PyTorch_Crash_Course.ipynb
+++ b/notebooks/PyTorch_Crash_Course.ipynb
@@ -788,7 +788,7 @@
         "for batch_data, batch_labels in dataloader:\n",
         "    print(\"Batch data:\", batch_data)\n",
         "    print(\"Batch labels:\", batch_labels)\n",
-        "    break  # Just print the first batch for demonstration"
+        "    break  # Just printing the first batch for demonstration"
       ]
     },
     {
